changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
@@ -211,7 +211,7 @@
 
                 <td>
                   <input type="text" class="form-control" [(ngModel)]="charges.vehicleNumberLube"
-                    oninput=";this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                    oninput=";this.value=this.value.toUpperCase();"
                     [ngModelOptions]="{standalone: true}" placeholder="Enter vehicle no./ barrel"
                     (blur)="setVehicleNumberLube()" />
                 </td>
