--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget4/tables-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget4/tables-widget4.component.html
@@ -272,7 +272,7 @@
               <div class="row">
                 <div class="col-md-4"></div>
                 <div class="col-md-2">
-                  <button type="submit" class="btn btn-outline-success my-2 my-sm-0"
+                  <button type="submit" class="btn btn-success my-2 my-sm-0"
                     [disabled]="!updateBankDetailsForm.valid" (click)="updateBankAcc()">Update</button>
                 </div>&nbsp;&nbsp;
                 <div class="col-md-2">
