--- a/src/app/_metronic/partials/layout/modals/modal2/modal2.component.html
+++ b/src/app/_metronic/partials/layout/modals/modal2/modal2.component.html
@@ -96,7 +96,7 @@
           <br>
 
           <div class="modal-footer justify-content-center">
-            <button type="submit" class="btn btn-outline-success my-2 my-sm-0"
+            <button type="submit" class="btn btn-success my-2 my-sm-0"
               (click)="fuelStaffRegister()">Save</button>
             <button type="cancel" class="btn btn-danger" (click)="close()">Close</button>
           </div>
@@ -175,7 +175,7 @@
           <br>
         </div>
         <div class="modal-footer">
-          <button type="submit" class="btn btn-outline-success my-2 my-sm-0" (click)="renewMappingStaff()">Add</button>
+          <button type="submit" class="btn btn-success my-2 my-sm-0" (click)="renewMappingStaff()">Add</button>
           <button type="cancel" class="btn btn-danger" (click)="closeReNew()">Close</button>
         </div>
       </form>
