--- a/src/app/_metronic/partials/layout/modals/modal4/modal4.component.html
+++ b/src/app/_metronic/partials/layout/modals/modal4/modal4.component.html
@@ -91,10 +91,10 @@
       </form>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-outline-success" (click)="submitTerminal()">
+      <button type="button" class="btn btn-success" (click)="submitTerminal()">
         Submit
       </button>
-      <button type="button" class="btn btn-outline-danger" (click)="close()">
+      <button type="button" class="btn btn-danger" (click)="close()">
         Cancel
       </button>
     </div>
