--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget3/tables-widget3.component.html
@@ -257,7 +257,7 @@
           <div class="col-md-4">
           </div>
           <div class="col-md-2">
-            <button type="submit" class="btn btn-outline-success my-2 my-sm-0"
+            <button type="submit" class="btn btn-success my-2 my-sm-0"
               (click)="UpdateDealerStaffDetails()">Update</button>
           </div>
           &nbsp;&nbsp;
