--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget5/tables-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget5/tables-widget5.component.html
@@ -279,7 +279,7 @@
           <div class="row">
             <div class="col-md-4"></div>
             <div class="col-auto">
-              <button type="submit" class="btn btn-outline-success my-2 my-sm-0"
+              <button type="submit" class="btn btn-success my-2 my-sm-0"
                 (click)="updatePOSName()">Update</button>
             </div>&nbsp;&nbsp;
             <div class="col-auto">
