--- a/src/app/_metronic/partials/layout/modals/modal/modal.component.html
+++ b/src/app/_metronic/partials/layout/modals/modal/modal.component.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-success" (click)="submit()">
+      <button type="button" class="btn btn-success my-2 my-sm-0" (click)="submit()">
         Submit
       </button>
       <button type="button" class="btn btn-danger" (click)="close()">
