--- a/src/app/_metronic/partials/layout/modals/modal3/modal3.component.html
+++ b/src/app/_metronic/partials/layout/modals/modal3/modal3.component.html
@@ -130,10 +130,10 @@
 
     </div>
     <div class="modal-footer">
-      <button type="button" class="btn btn-outline-success" (click)="addBankDetails()">
+      <button type="button" class="btn btn-success" (click)="addBankDetails()">
         Submit
       </button>
-      <button type="button" class="btn btn-outline-danger" (click)="close()">
+      <button type="button" class="btn btn-danger" (click)="close()">
         Cancel
       </button>
     </div>
